# programming

./: .gitignore  README.md  hello.cc  helo.py  lab6.3  main  text.cpp
Algorytms/DigitSort/: main  main.c
Algorytms/Mergesort/: main  main.c
Algorytms/hesh/: hesh  hesh.c  hesh2  hesh2.c
Algorytms/lab1/: home1  home1.c  task1.c
Algorytms/lab10/: main  main.c
Algorytms/lab2/: bubble_sort.c  sort
Algorytms/lab3/: shaker_sort.c  sort
Algorytms/lab4/: a.out  insert_sort.c  sort  sort.c
Algorytms/lab5/: shell_sort.c  sort
Algorytms/lab6/: find  finder.c
Algorytms/lab7/: maim  main.c
Algorytms/lab8/: main  main.c
Algorytms/lab9/: main  main.c
Algorytms/stack and queue/: main  main.c
aaaaaa/: dockerfile  main.py
aaaaaa/kind/: configure-registry.sh  deployment.yaml  kind-cluster.yaml  service-app.yaml
c/lab10/: lab10  lab10.c  line.c
c/lab5/: lab5.2  lab5.2.c
c/lab6/: lab6.2
c/lab8/: 21  21dinamic  21dinamic.c
c/lab8/output/: 21
c/laba 7/: task1.c  task2  task2.c  task3  task5  task5.c  task6
c/output/: lab5.2  main
c/semestr2/C-Programming-cpp_task/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  paint
c/semestr2/C-Programming-cpp_task/src/: main.cpp  paint_core.cpp
lab10/output/: lab10
lab8/output/: 21dinamic
lab9/: mergesort.py  sort.c
laba 7/: task1
output/: milka  text
python/: 1.py
python/RGR/: books_list  rgr.py  users_accounts
python/lab13/: A.py  B.py  C.py  D.py
python/my_server/: 1.py
python/proj/: game.py
python/winterSchool/: level1_task1.py  level2_task1.py  level2_task3.py  map.txt
(+88 files in other folders)
